# narcissus

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
MMM-narcissus/: config.js
narcissus/: __init__.py  __main__.py  audio.py  hotword.py  intent.py  nlg.py  nlu.py  stt.py  tts.py  util.py  vision.py
narcissus/intents/: appearance.py  appreciation.py  default.py  greeting.py  insult.py  maps.py  selfaware.py  snow_white.py  user.py  weather.py
narcissus/intents/joke/: joke.json  joke.py
